# diskominfo-test

./: pyproject.toml  readme.md  scripts.sql
apps/api/: urls.py
apps/api/courses/: serializers.py  urls.py  views.py
apps/api/users/: serializers.py  urls.py  views.py
apps/web/: urls.py  views.py
apps/web/courses/: urls.py  views.py
apps/web/usercourse/: urls.py  views.py
apps/web/users/: urls.py  views.py
authentication/: backends.py
config/: settings.py  urls.py
database/: models.py  repositories.py
templates/: base.html  index.html
templates/components/: navbar.html
templates/pages/: dashboard.html  login.html
templates/pages/courses/: form.html  index.html
templates/pages/usercourse/: form.html  index.html
templates/pages/users/: form.html  index.html
tests/: test_user_login.py
