[tool.poetry]
name = "kominfo-test-be"
version = "0.1.0"
description = ""
authors = ["Adrian Maulani <maulani.ad@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
python-decouple = "^3.8"
django = "^5.1.4"
djangorestframework = "^3.15.2"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
